[package]
name = "superpoll-net"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "Daogang Tang <daogangtang@gmail.com>"]
edition = "2018"
description = "Async networking primitives for TCP/UDP/Unix communication"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-net"
homepage = "https://github.com/stjepang/async-net"
documentation = "https://docs.rs/async-net"
keywords = ["networking", "uds", "mio", "reactor", "std"]
categories = ["asynchronous", "network-programming", "os"]
readme = "README.md"

[dependencies]
superpoll-io = {path = "../superpoll-io"}
superpoll-blocking = {path = "../superpoll-blocking"}
fastrand = "1.3.5"
futures = "0.3.8"
